--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -220,7 +220,7 @@
    "execution_count": 23,
    "id": "a45dd486",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -239,6 +239,14 @@
     "print(f\"Chica 1 (XOO): {res.count(0) / len(res) * 100} %\")\n",
     "print(f\"Chica 2 (OXO): {res.count(1) / len(res) * 100} %\")\n",
     "print(f\"Chica 3 (OOX): {res.count(2) / len(res) * 100} %\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cede08b5",
+   "metadata": {},
+   "source": [
+    "**¿Por qué cambian los resultados si se juega lanzando una única moneda?**"
    ]
   }
  ],
